--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>台股趨勢AI專業分析助手 - Joseph PAI 2025 (Final v21)</title>
+    <title>台股趨勢AI專業分析助手 - Joseph PAI 2025 (Final v3.8)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
@@ -429,8 +429,8 @@
 <body>
 <div class="container py-5">
 
-    <h1 class="text-center mb-2">台股趨勢AI專業分析助手</h1>
-    <p class="text-center text-white-50 mb-5">Joseph PAI 2025 11/26 專業評分詳解版 • Netlify Functions + TWSE/TPEx API</p>
+    <h1 class="text-center mb-2">台股趨勢AI專業分析助手 V3.8</h1>
+    <p class="text-center text-white-50 mb-5">Joseph PAI 2025 專業評分詳解版 • Netlify Functions + TWSE/TPEx API</p>
 
     <div class="row justify-content-center mb-4">
         <div class="col-md-8">
